added shfc source files