@@ -13,8 +13,6 @@ public final class XsdBoolean extends XsdAnySimpleType {
 
   static {
     registerConstructor(XsdBoolean.class, SHORT_NAME, LONG_NAME);
-    registerConverter(Boolean.class, XsdBoolean.class);
-    registerConverter(boolean.class, XsdBoolean.class);
   }
 
   public boolean value;
@@ -25,13 +23,6 @@ public final class XsdBoolean extends XsdAnySimpleType {
 	public XsdBoolean(boolean value) {
 		this.value = value;
 	}
-
-  /**
-   * @param value a Java boolean representation of an XSD boolean
-   */
-  public XsdBoolean(Boolean value) {
-    this.value = value;
-  }
 
 	/**
 	 * @param value a Java string, representing an XSD boolean, e.g., "\"true\"^^<xsd:boolean>"
@@ -77,7 +68,20 @@ public final class XsdBoolean extends XsdAnySimpleType {
    * returns a java.lang.Boolean container for an HFC XsdBoolean object
    */
   public Object toJava() {
-    return new Boolean(this.value);
+    return  Boolean.valueOf(this.value);
   }
+
+	@Override
+	public int compareTo(Object o) {
+		if(  o instanceof AnyType.MinMaxValue ) {
+			AnyType.MinMaxValue minMaxValue = (MinMaxValue) o;
+			return minMaxValue.compareTo(this);
+		}
+		if (! (o instanceof  XsdBoolean)){
+			throw new IllegalArgumentException("Can't compare " + this.getClass()+" and " + o.getClass() );
+		}
+		return Boolean.compare(this.value,((XsdBoolean) o).value);
+	}
+
 
 }
